src/test/deca/syntax/invalid/mul_float_mul_void.deca
// Description :
//
//      Test de programme syntaxiquement incorrect(non respect des attentes à
//      droite de l'opérateur * avec un float à gauche).
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{
    float y = 2.8*;
    print(y);
}